--- a/style.css
+++ b/style.css
@@ -12,16 +12,15 @@
   align-items: center;
   justify-content: center;
 }
+
 .card-container {
   background-color: hsl(216, 50%, 16%);
-  margin: 2em;
+  margin: 4em;
   padding: 22px;
   width: 360px;
   height: 575px;
   border-radius: 15px;
-  -webkit-box-shadow: 7px 8px 12px 17px rgba(13, 25, 43, 0.52);
-  -moz-box-shadow: 7px 8px 12px 17px rgba(13, 25, 43, 0.52);
-  box-shadow: 2px 2px 12px 17px rgba(13, 25, 43, 0.52);
+  box-shadow: 0px 0px 12px 17px rgba(13, 25, 43, 0.52);
 }
 .card-container:hover {
   transform: translateY(1%);
@@ -123,4 +122,39 @@ hr {
 .avatar-name:hover {
   color: hsl(178, 100%, 50%);
   cursor: pointer;
+}
+@media (max-width: 500px) {
+  .card-container {
+    margin-top: 10em;
+    margin-bottom: 10em;
+  }
+}
+@media (max-width: 450px) {
+  .card-container {
+    width: 340px;
+  }
+  .card-container-img {
+    width: 290px;
+    height: 270px;
+  }
+}
+@media (max-width: 370px) {
+  .card-container {
+    width: 300px;
+    height: 560px;
+  }
+  .card-container-img {
+    width: 260px;
+    height: 260px;
+  }
+}
+@media (max-width: 335px) {
+  .card-container {
+    width: 280px;
+    height: 550px;
+  }
+  .card-container-img {
+    width: 240px;
+    height: 250px;
+  }
 }
